Version 3.7.0:
Flet 0.80.4 Migration - Major framework upgrade with breaking API changes:
  Removed Features:
  - Removed DLSS SR Preset Override feature entirely.
    This feature allowed configuring DLSS Super Resolution presets (K/L/M) via Windows registry
    or Linux environment variables. The feature has been deprecated as NVIDIA's driver now
    handles preset selection automatically based on GPU architecture.
  Linux Build Fix:
  - Fixed GTK/SVG errors on Nobara 43 (Issue #127) caused by bundled system libraries.
  - PyInstaller now excludes libstdc++, libgcc_s, libc.so to use Flatpak runtime libraries.
  - This prevents CXXABI version conflicts with the Flatpak Freedesktop runtime.
  Framework Upgrade:
  - Upgraded from Flet 0.28.3 to Flet 0.80.4 (major version jump).
  - Modernized entry point from ft.app() to ft.run().
  - Updated all alignment constants to uppercase (ft.Alignment.CENTER, etc.).
  - Migrated dialog operations to new API (show_dialog/pop_dialog).
  - Updated FilePicker to use async service pattern (returns path directly).
  - Fixed ExpansionTile parameter (initially_expanded -> expanded).
  - Fixed PopupMenuItem parameter (text -> content).
  - Fixed Dropdown parameter (on_change -> on_select).
  - Fixed BlurStyle API (ShadowBlurStyle -> BlurStyle).
  API Compatibility:
  - Updated all UI components to use _page_ref for stored page reference.
  - In Flet 0.80.4+, controls inherit read-only 'page' property.
  - Updated session/client_storage usage for API compatibility.
  Performance Optimization:
  - Fixed sequential image loading (~1.9s) now batched for concurrent loading (~350-400ms).
  - ImageLoadCoordinator batches page.update() calls (2 calls instead of 11 per tab).
  - 50ms debounce window collects concurrent image loads for synchronized fade-in.
  - Upgraded skeleton loaders to ft.Shimmer for GPU-accelerated animation.
  - Documented Flet 0.80.4 performance patterns in CLAUDE.md for future reference.